contrib/k8s/grafain.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafain-rpc
spec:
  ports:
    - port: 26657
      name: rpc
  selector:
    app: grafain
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: grafain-hook
spec:
  ports:
    - port: 443
      name: hook
      targetPort: 8443
  selector:
    app: grafain
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: grafain-p2p
spec:
  ports:
    - port: 26656
      name: p2p
      targetPort: 26656
  selector:
    app: grafain
  type: LoadBalancer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafain
spec:
  serviceName: grafain
  replicas: 1
  selector:
    matchLabels:
      app: grafain
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: grafain
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values: [grafain]
              topologyKey: kubernetes.io/hostname
      serviceAccountName: grafain
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 2000
      terminationGracePeriodSeconds: 10
      containers:
        - name: grafain
          imagePullPolicy: Always
          image: alpetest/grafain:manual
          args:
            - -home=/data/grafain
            - -hook-certs=/certs
            - -hook-address=0.0.0.0:8443
            - start
            - -bind=unix:///socks/app.sock
          ports:
            - containerPort: 8443
              name: hook
          volumeMounts:
            - name: socksdir
              mountPath: /socks
            - name: tmdir
              mountPath: /data/grafain
              subPath: grafain
            - name: tls-certs
              mountPath: /certs
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
        - name: tendermint
          imagePullPolicy: Always
          image: iov1/tendermint:v0.31.11-iov1
          ports:
            - containerPort: 26656
              name: p2p
            - containerPort: 26657
              name: rpc
          command:
            - bash
            - "-c"
            - |
              set -exo pipefail

              # wait for grafain to get started
              while [ ! -S /socks/app.sock ]; do
                sleep 1
              done

              exec tendermint node \
                --consensus.create_empty_blocks=false \
                --moniker="`hostname`" \
                --log_level="p2p:info,state:info,*:error" \
                --proxy_app="unix:///socks/app.sock"
          volumeMounts:
            - name: tmdir
              mountPath: /data/tendermint
              subPath: tendermint
#            - mountPath: /data/tendermint/config/config.toml
#              name: tm-configuration
#              subPath: config.toml
#              readOnly: true
            - name: socksdir
              mountPath: /socks
            - name: tm-rw-volume
              mountPath: /tmp
          securityContext:
            readOnlyRootFilesystem: true
          resources:
            limits:
              cpu: 550m
              memory: 768Mi
            requests:
              cpu: 250m
              memory: 512Mi
          readinessProbe:
            exec:
              command:
                - sh
                - -o
                - pipefail
                - -ec
                - 'curl -s --fail http://localhost:26657/status | jq --exit-status ".result.sync_info.catching_up==false"'
            failureThreshold: 999999
            periodSeconds: 20
            initialDelaySeconds: 10
          livenessProbe:
            exec:
              command:
                - sh
                - -o
                - pipefail
                - -ec
                - 'curl -s --fail http://localhost:26657/abci_info | jq --exit-status ".result.response"'
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2
      volumes:
        - name: grafain-genesis
          configMap:
            name: grafain-genesis
        - name: tls-certs
          secret:
            secretName: tls-grafain
#            defaultMode: 0400
        - name: socksdir
          emptyDir: {}
        - name: tm-rw-volume
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: tmdir
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi
