contrib/k8s/grafain-hook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: grafain
webhooks:
- name: grafain.default.svc
#  failurePolicy: Ignore
  failurePolicy: Fail
  rules:
    - apiGroups:
        - ""
      apiVersions:
        - v1
      operations:
        - CREATE
      resources:
        - pods
      scope: "Namespaced"
  clientConfig:
    service:
      namespace: default
      name: grafain
      path: /wrong-validate-v1-pod
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHRENDQWdDZ0F3SUJBZ0lVQzN1aVliYzFqVFFxSzlCaGdCMHJZOEhtRVBJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pERVFNQTRHQTFVRUNoTUhSM0poWm1GcGJqRVFNQTRHQTFVRUF4TUhaM0poWm1GcGJqQWVGdzB4T1RBNQpNVEF4T1RBM01EQmFGdzB5TkRBNU1EZ3hPVEEzTURCYU1DUXhFREFPQmdOVkJBb1RCMGR5WVdaaGFXNHhFREFPCkJnTlZCQU1UQjJkeVlXWmhhVzR3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREwKTXJTQ2hoQWhjWGJ5NnFQa0JNdFB6d0JJcVdzWFA1L2hKdVFrUGR1YWRJMTZtQ2o3ei9OTnVCcG5QbE40WmZoZgp4aGJhOGhjUjJLZ [...]
  admissionReviewVersions:
    - v1beta1
  timeoutSeconds: 1
